# plotters-iced

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: test.yml
examples/: cpu-monitor.rs  large-data.rs  mouse_events.rs  pure_example.rs  split-chart.rs  web-demo.html
examples/split-chart/: Cargo.toml  cargo.toml  index.html
examples/split-chart/src/: main.rs
src/: backend.rs  chart.rs  error.rs  event.rs  graphics.rs  lib.rs  renderer.rs  sample.rs  utils.rs  widget.rs
src/backend/: mod.rs
src/backend/triangulate/: binding.cpp
src/backend/utils/: converter.rs  mod.rs  path.rs
src/native/: graphics.rs  mod.rs  native.rs  widget.rs
src/native/backend/: mod.rs
src/native/backend/triangulate/: mod.rs
src/native/backend/utils/: converter.rs  mod.rs  path.rs  shape.rs
src/pure/: mod.rs  pure.rs  renderer.rs  widget.rs
src/sample/: lttb.rs
src/triangulate/: mod.rs
src/utils/: converter.rs  shape.rs
src/web/: mod.rs  svg.rs  text.rs  widget.rs
