[package]
name = "split-chart"
version = "0.1.0"
authors = ["Joylei <leingliu@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.12", features = ["canvas"] }
plotters-iced = { path = "../../" }
plotters = { version = "0.3", default_features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies.iced]
version = "0.12"
features = ["webgl"]
